--- a/src/screens/college/style.css
+++ b/src/screens/college/style.css
@@ -74,3 +74,13 @@
     margin: auto;
     border-radius: 10%;
   }
+  .tl-bdy {
+    display: grid;
+    height: 100vh;
+  }
+  .intl-bdy {
+    margin: auto;
+  }
+  .singImg {
+    width: 100%;
+  }
