--- a/src/screens/professional/style.css
+++ b/src/screens/professional/style.css
@@ -74,3 +74,14 @@
     height: 40px;
     margin: auto;
   }
+
+  .tl-bdy {
+    display: grid;
+    height: 100vh;
+  }
+  .intl-bdy {
+    margin: auto;
+  }
+  .singImg {
+    width: 100%;
+  }
