--- a/src/screens/BillingScreen/BillingScreen.css
+++ b/src/screens/BillingScreen/BillingScreen.css
@@ -28,6 +28,7 @@ tbody tr {
 }
 tbody tr td {
   border: 0px solid #000 !important;
+  vertical-align: middle;
 }
 .table-name th {
   font-family: "f3";
