--- a/src/screens/BillingScreen/responsive.css
+++ b/src/screens/BillingScreen/responsive.css
@@ -13,7 +13,7 @@
 
 @media (max-width: 767px) {
   .rt-tb-report {
-    margin-top: 15px;
+    margin-top: 64px;
   }
   .wel-cm-bc {
     width: 100% !important;
@@ -106,7 +106,7 @@
     width: 200px !important;
   }
   .tbl-bx-rpt {
-    width: 100%;
+    width: 99%;
     overflow-x: scroll;
   }
   .table-box {
@@ -116,7 +116,11 @@
     margin-top: 50px;
   }
 }
-@media (min-width: 568px) and (max-width: 768px) {
+@media (max-width: 992px) {
+  .skl-rpt-bx-tb {
+    width: 100%;
+    overflow-x: scroll;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .navbar-light .navbar-nav .nav-link {
@@ -165,7 +169,7 @@
     width: 200px !important;
   }
   .tbl-bx-rpt {
-    width: 100%;
+    width: 99%;
     overflow-x: scroll;
   }
   .table-box {
@@ -203,10 +207,6 @@
   }
   .table-box {
     width: 980px;
-  }
-  .tl-br-cht {
-    width: 100%;
-    overflow-x: scroll;
   }
 }
 
