--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -1,24 +1,280 @@
-@media (max-width: 768px) {
-  .lftMenu {
+@media (max-width: 576px) {
+  .min-pos-ab {
+    position: absolute;
+  }
+  .read-cert {
+    width: 250px !important;
+  }
+  .lft-skl-bldg {
     width: 100% !important;
     height: auto !important;
   }
-  .wel-cm-bc h4 {
-    margin-top: 0;
+  .prog-bar-subs .progress {
+    width: 96px;
+  }
+  .cls-fre h4 {
+    font-family: "f1";
+    font-size: 12px;
+    margin-bottom: 0;
+  }
+  .cls-fre h2 {
+    margin-bottom: 0;
+  }
+  .billing_back {
+    width: 92px !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .rt-tb-report {
+    margin-top: 64px;
+  }
+  .wel-cm-bc {
+    width: 100% !important;
   }
   .logo-tag {
     margin-bottom: 15px;
   }
+  .row-table {
+    overflow-y: scroll;
+  }
+  .table-name {
+    width: 730px !important;
+  }
+  .bill-rit {
+    padding: 0 10px !important;
+  }
+  .lftqst {
+    top: 50px;
+    position: fixed;
+    height: 95vh !important;
+  }
+  .lftqst .logo {
+    display: none !important;
+  }
+  .lftqst .logo-tag {
+    display: none !important;
+  }
+  .lftsdbr {
+    top: 50px;
+    position: fixed;
+    height: 95vh !important;
+  }
+  .lftsdbr .logo {
+    display: none !important;
+  }
+  .lftsdbr .logo-tag {
+    display: none !important;
+  }
+  .non-md {
+    left: -350px;
+  }
+  .test-main {
+    height: 100vh;
+    margin: 75px auto 0;
+  }
+  .vid-frame iframe {
+    height: 250px;
+  }
+  .navbar {
+    z-index: 111;
+  }
+  .lftMenu {
+    z-index: 111;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: auto !important;
+  }
+  .read-cert {
+    width: 305px;
+  }
+  .onboarding-button {
+    width: 400px !important;
+  }
+  .student-prof .card {
+    margin: 10px auto !important;
+  }
+  .billing-add {
+    width: 100%;
+  }
+  .cls-fre h2 {
+    font-size: 19px !important;
+  }
+  .cls-fre h4 {
+    font-size: 13px !important;
+  }
+  .billing_back {
+    display: none;
+  }
+  .lft-skl-bldg {
+    width: 100% !important;
+    height: auto !important;
+  }
+  .rit-tst .tab-content {
+    overflow-x: scroll;
+  }
+  .tit-cert-box .table,
+  .txt-tbl-acrd {
+    width: 1000px;
+  }
+  .tit-cert-box th {
+    width: 200px !important;
+  }
+  .tit-cert-box td {
+    width: 200px !important;
+  }
+  .tbl-bx-rpt {
+    width: 99%;
+    overflow-x: scroll;
+  }
+  .table-box {
+    width: 980px;
+  }
+  .tl-rt-qst {
+    margin-top: 50px;
+  }
 }
-@media (max-width: 576px) {
-  .min-pos-ab {
-    position: absolute;
+@media (max-width: 992px) {
+  .skl-rpt-bx-tb {
+    width: 100%;
+    overflow-x: scroll;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .navbar-light .navbar-nav .nav-link {
+    width: 170px;
+  }
+  .bill-rit {
+    padding: 15px !important;
+    margin: 0 auto;
+    height: 100vh;
+    overflow-y: scroll;
+  }
+  .row-table {
+    width: 560px !important;
+    overflow-x: scroll;
+  }
+  .table-name {
+    width: 730px !important;
+  }
+  .billing-add {
+    width: 100% !important;
+  }
+  .test-main .bill-rit {
+    width: 70% !important;
+  }
+  .read-cert {
+    width: 305px !important;
+  }
+  .onboarding-button {
+    width: 400px !important;
+  }
+  .student-prof .card {
+    margin: 10px auto !important;
+  }
+  .lft-skl-bldg {
+    height: auto !important;
+  }
+  .rit-tst .tab-content {
+    overflow-x: scroll;
+  }
+  .tit-cert-box .table,
+  .txt-tbl-acrd {
+    width: 1000px;
+  }
+  .tit-cert-box th {
+    width: 200px !important;
+  }
+  .tit-cert-box td {
+    width: 200px !important;
+  }
+  .tbl-bx-rpt {
+    width: 99%;
+    overflow-x: scroll;
+  }
+  .table-box {
+    width: 980px;
+  }
+  .cls-fre h2 {
+    font-size: 15px !important;
+  }
+  .cls-fre h4 {
+    font-size: 12px !important;
+  }
+}
+@media (min-width: 992px) {
+  .bill-rit {
+    width: 76% !important;
+    margin: 0 auto;
+    padding: 15px !important;
+  }
+  .tl-skl-bldg {
+    display: flex;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .tit-cert-box {
+    overflow-x: scroll;
+  }
+  .tit-cert-box .table,
+  .txt-tbl-acrd {
+    width: 1000px;
+  }
+  .tit-cert-box th {
+    width: 200px !important;
+  }
+  .tit-cert-box td {
+    width: 200px !important;
+  }
+  .tbl-bx-rpt {
+    width: 100%;
+    overflow-x: scroll;
+  }
+  .table-box {
+    width: 980px;
+  }
+}
+
+@media (min-width: 1200px) and (max-width: 1400px) {
+  .tit-cert-box th {
+    width: 180px !important;
+  }
+  .tit-cert-box td {
+    width: 180px !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .bill-rit {
+    width: 80% !important;
+    margin: 0 auto;
   }
 }
 
 @media (min-width: 1401px) {
   .w1400-20 {
     width: 20% !important;
+  }
+  .tit-cert-box th {
+    width: 250px !important;
+  }
+  .tit-cert-box td {
+    width: 250px !important;
+  }
+  .in-rt-qst {
+    padding: 10%;
+  }
+  .qus-tl-box {
+    margin-top: 55px;
+  }
+  .tl-rt-qst {
+    width: 70%;
+  }
+  .bar-chart {
+    width: 500px;
+    height: 400px;
   }
   .read-cert {
     width: 75%;
