--- a/src/screens/signup/responsive.css
+++ b/src/screens/signup/responsive.css
@@ -5,6 +5,9 @@
   .singImg {
     width: 320px;
   }
+  .logo {
+    padding-top: 15px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -28,6 +31,9 @@
   .bdy-in {
     width: 93%;
   }
+  .singImg {
+    width: 470px !important;
+  }
 }
 @media (min-width: 1366px) {
   .bdy-in {
@@ -40,6 +46,6 @@
 
 @media (min-width: 1570px) {
   .terms-cond-text {
-    width: 550px !important;
+    width: 320px !important;
   }
 }
