--- a/src/screens/signup/style.css
+++ b/src/screens/signup/style.css
@@ -1,26 +1,8 @@
-.tl-bdy {
-  display: grid;
-  height: 100vh;
-}
-.intl-bdy {
-  margin: auto;
-}
-.singImg {
-  width: 100%;
-}
-
 .sign-form {
   box-shadow: 0px 5px 18px -7px #d1d1d1;
   border-radius: 21px;
-  margin-top: 21px;
-}
-
-.sign-form h2 {
-  font-family: "f1";
-  font-size: 19px;
-  margin-top: 0px;
-  text-align: center;
-  margin-bottom: 15px;
+  width: 380px;
+  margin: 25px auto;
 }
 .inputGroup {
   position: relative;
@@ -48,6 +30,7 @@
   font-family: "f3";
   position: absolute;
   width: 250px;
+  line-height: 21px;
 }
 .terms-cond-text a {
   font-size: 13px;
@@ -90,4 +73,24 @@
 .success-msg {
   color: green;
   white-space: nowrap;
+}
+.sign-tl-bdy {
+  height: 100vh;
+  display: grid;
+}
+.stud-prof .form-check-input:checked[type="radio"] {
+  background: none !important;
+}
+.stud-prof .form-check-input:checked {
+  background: none !important;
+}
+.stud-prof .form-check-input[type="radio"] {
+  border-radius: 9px !important;
+}
+.stud-prof .form-check-input {
+  border-radius: 9px;
+  width: 13em !important;
+  height: 13em !important;
+  margin: 0 !important;
+  background: none !important;
 }
