--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -46,6 +46,11 @@ body {
   font-size: 13px;
 }
 
+.f3-15 {
+  font-family: "f3";
+  font-size: 15px;
+}
+
 .f1-15 {
   font-family: "f1";
   font-size: 15px;
@@ -578,18 +583,24 @@ body {
   width: 300px;
   left: 10px;
 }
+.tl-rt-qst::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
 .tl-rt-qst {
   background: #fff;
   padding: 2vh;
-  margin: auto;
   width: 100%;
   border-radius: 5px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .in-rt-qst {
   background: #fff;
   box-shadow: 0 0 6px #efefef;
   width: 100%;
+  margin: auto;
   padding: 25px;
   border-radius: 7px;
 }
@@ -976,6 +987,10 @@ body {
   width: 15px;
   margin-right: 8px;
 }
+.timer-icon {
+  width: 15px;
+  margin-right: 8px;
+}
 .lft-skl-bldg {
   height: 80vh;
   padding: 5px;
@@ -1094,4 +1109,115 @@ body {
 
 .testIntro {
   height: 100vh;
+}
+
+/* audio css*/
+.header-wrapper {
+  padding: 8px 16px;
+  text-align: center;
+
+  width: 67px;
+  height: 36px;
+  left: 160px;
+  background: #4dd188;
+  border-radius: 50px;
+}
+
+.micro-vid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 35px;
+  background: #45acff;
+  border-radius: 50px;
+  display: grid;
+  right: 10px;
+  top: 8px;
+  box-shadow: 0 7px 12px -3px #3ea8ff;
+  margin-right: 15px;
+  padding: 5px 5px;
+}
+
+.bdy-in {
+  margin: auto;
+}
+.rec-box {
+  display: flex;
+  align-items: center;
+}
+.timer-rec {
+  margin-bottom: 0;
+  margin-left: 12px;
+}
+.rec-box {
+  box-shadow: 0 0 10px -5px #c5c5c5;
+  border-radius: 10px;
+  padding: 8px 15px 8px 0;
+  background: #f1f3f4;
+  position: relative;
+}
+.rec-box .rec-mic-icon {
+  width: 36px;
+  height: 36px;
+  background: #2990e4;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rec-box .rec-ply-icon button {
+  background: none;
+  border-radius: 50px;
+  overflow: hidden;
+  border: 0 !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.rec-box .rec-ply-icon .play-paus-icon {
+  width: 20px;
+}
+.rec-box .rec-ply-icon .mic-icon {
+  width: 14px;
+}
+.rec-box .rec-ply-icon {
+  width: 36px;
+  height: 36px;
+  background: #2990e4;
+  border-radius: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 12px;
+}
+.rec-box .rec-mic-icon .mic-icon {
+  width: 13px;
+}
+.timer-rec {
+  font-family: "f3";
+  font-weight: bold;
+  font-size: 15px;
+}
+.vert-line {
+  height: 30px;
+  width: 2px;
+  background-color: #374c53;
+  margin: 10px;
+}
+.rec-adio {
+  font-family: "f3";
+  margin-bottom: 0;
+}
+.lft-in-rec-box {
+  width: 75%;
+  display: flex;
+  align-items: center;
+}
+.rec-pas-btn-aud {
+  position: absolute;
+  right: 0%;
+  background: #f1f3f4;
+  display: flex;
+  z-index: 11;
 }
