--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -312,6 +312,13 @@
     display: grid !important;
   }
   .rec-aud-tag {
-    width: 97%;
+    width: 95%;
+  }
+  .textrec {
+    padding: 0 6rem !important;
   }
 }
+
+/** height-start **/
+
+/** height-end **/
