--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -41,9 +41,17 @@ body {
   color: #50c976;
 }
 
+.text-green-light {
+  color: #7fbad1;
+}
+
 .f3-13 {
   font-family: "f3";
   font-size: 13px;
+}
+.f3-14 {
+  font-family: "f3";
+  font-size: 14px;
 }
 
 .f3-15 {
@@ -683,6 +691,10 @@ body {
   font-family: "f3";
   font-size: 13.5px;
   transition: 0.1s all linear;
+  text-decoration: none;
+}
+.pre-btn:hover {
+  color: #fff;
 }
 .pre-btn img {
   width: 15px;
@@ -823,6 +835,7 @@ body {
 }
 .fill-qust textarea {
   border-radius: 5px;
+  padding: 10px 15px;
   height: 125px;
   width: 100%;
 }
@@ -1039,8 +1052,8 @@ body {
   width: 12px;
   height: 12px;
   position: absolute;
-  top: 1px;
-  left: 4px;
+  top: 0px;
+  left: 2px;
   border-radius: 100%;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
@@ -1153,8 +1166,8 @@ body {
 .rec-box {
   box-shadow: 0 0 10px -5px #c5c5c5;
   border-radius: 10px;
-  padding: 8px 15px 8px 0;
-  background: #f1f3f4;
+  padding: 15px;
+  background: #fff;
   position: relative;
 }
 .rec-box .rec-mic-icon {
@@ -1217,7 +1230,15 @@ body {
 .rec-pas-btn-aud {
   position: absolute;
   right: 0%;
-  background: #f1f3f4;
+  background: #fff;
   display: flex;
   z-index: 11;
+}
+audio {
+  background: transparent !important;
+}
+audio::-webkit-media-controls-play-button,
+audio::-webkit-media-controls-panel {
+  background-color: #fff;
+  color: #000;
 }
