--- a/src/screens/login/style.css
+++ b/src/screens/login/style.css
@@ -16,7 +16,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
-  color: #0b171b;
+  color: #0b171b !important;
 }
 .login-form {
   box-shadow: 0px 5px 18px -7px #d1d1d1;
