--- a/src/screens/BillingScreen/BillingScreen.css
+++ b/src/screens/BillingScreen/BillingScreen.css
@@ -18,7 +18,7 @@
   font-size: 21px;
 }
 .table {
-  border: 1px solid #e5e5e5;
+  border: 1px solid #E7E7ED;
 }
 tbody {
   border-top: 0px solid #e5e5e5 !important;
@@ -51,12 +51,14 @@ tbody tr td {
 .down-load-btn {
   font-size: 12px;
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
   color: #fff !important;
-  border: 1px solid #137ad3 !important;
-  background: #137ad3 !important;
+  border: 1px solid #298EE0 !important;
+  background: #298EE0 !important;
   text-decoration: none;
   margin-right: 10px;
+  width: 154px;
+  height: 37px;
 }
 .rate-btn {
   font-size: 12px;
@@ -77,8 +79,8 @@ tbody tr td {
   width: 4px;
   height: 4px;
   border-radius: 100%;
-  background-color: #535353;
-  box-shadow: 0px 8px 0px #535353, 0px 17px 0px #535353;
+  background-color: #6B6C7E;
+  box-shadow: 0px 8px 0px #6B6C7E, 0px 17px 0px #6B6C7E;
 }
 .test-dot-tabl {
   width: 4px;
@@ -105,7 +107,7 @@ tbody tr td {
   margin-bottom: 0;
   font-size: 33px;
   text-align: left;
-  color: #118af3 !important;
+  color: #298EE0 !important;
   z-index: 11;
   text-align: center;
 }
@@ -113,19 +115,22 @@ tbody tr td {
   font-family: "f1";
   font-size: 20px;
   text-align: left;
-  color: #000 !important;
+  color: #080D14 !important;
   z-index: 11;
   text-align: center;
 }
 .billing-add {
   background: #fff;
-  border-radius: 10px;
-  box-shadow: -3px 15px 12px -4px #ededed;
+  /* border-radius: 10px; */
+  /* box-shadow: -3px 15px 12px -4px #ededed; */
   height: 135px;
-  width: 80%;
+  width: 70%;
   align-items: center;
   overflow: hidden;
   position: relative;
+  background: #FFFFFF;
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;
 }
 .billing_back {
   position: absolute;
@@ -160,7 +165,8 @@ tbody tr td {
   margin-top: 15px;
   margin-bottom: 0;
   font-weight: bold;
-  color: #0c4a8b;
+  color: #003866;
+  width: 250px;
 }
 .wt-we-get ul {
   padding: 0;
