--- a/src/screens/ReportScreen/ReportScreen.css
+++ b/src/screens/ReportScreen/ReportScreen.css
@@ -149,7 +149,10 @@
   color: #0c4a8b;
 }
 .table {
-  border: 1px solid #c5c5c5;
+  background: #FFFFFF;
+  border: 1px solid #E7E7ED;
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 tbody {
   border-top: 0px solid #c5c5c5 !important;
@@ -197,4 +200,11 @@ tbody tr td {
   border-radius: 100%;
   background-color: #535353;
   box-shadow: 0px 8px 0px #535353, 0px 17px 0px #535353;
+}
+.tr-name{
+  font-family: 'f3';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  color: #272833;
 }
