--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -69,6 +69,12 @@ body {
   font-family: "f1";
   /* color:#003866; */
 }
+
+.f1-16-header {
+  font-size: 18px;
+  font-family: "f1";
+  color:#003866;
+}
 .f1-17 {
   font-size: 17px;
   font-family: "f1";
@@ -96,6 +102,9 @@ body {
   padding: 10px 10px 10px 0;
 }
 .arrow-left {
+  width: 12px;
+}
+.arrow-down {
   width: 12px;
 }
 .logo {
@@ -323,6 +332,23 @@ body {
   right: 25px;
   top: 8px;
   box-shadow: 0 7px 10px -2px #3ea8ff;
+}
+.play-vid-not-vist {
+  width: 40px;
+  height: 40px;
+  background: #06518E;
+  border-radius: 50px;
+  display: grid;
+  position: absolute;
+  right: 25px;
+  top: 8px;
+  box-shadow: 0 7px 10px -2px #06518E;
+}
+.play-vid-not-vist img {
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 22px;
 }
 /* .play-btn-icon{
   text-align: center; 
@@ -830,12 +856,12 @@ body {
   padding: 5px;
   margin-bottom: 15px;
 }
-.clik-here {
+.clik-here {  
   background-color: #3ea8ff;
   border-radius: 12px;
   color: #fff;
   font-size: 13px;
-  height: 35px;
+  height: 32px;
   border: 0;
   width: 100px;
 }
@@ -995,11 +1021,14 @@ body {
   font-weight: bold;
   color: #0c4a8b !important;
   margin-bottom: 5px;
-  width: 45px;  
+  width: 45px; 
+  text-align: start; 
+  margin-left: 17px;
+  
 }
 .base-card-report{
   background: #FFFFFF; 
-  box-shadow: 0px 50px 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 50px 50px grey(0, 0, 0, 0.1);
   border-radius: 16px;
   border:1px solid grey;
 }
@@ -1021,7 +1050,7 @@ body {
   width: 132px;
   height: 36px;
   font-size: 12.5px;
-  margin: 10px auto;
+  margin: 4px auto;
 }
 .buy-now-btn {
   display: flex;
@@ -1321,6 +1350,19 @@ audio::-webkit-media-controls-panel {
   padding-left: 35px !important;
   font-size: 18px;
 }
+.inputField-mobile-no {
+  font-family: "f3";
+  width: 100%;
+  height: 40px;
+  padding-left: 58px !important;
+  font-size: 13px;
+}
+ span{
+  position: absolute;
+  
+  margin-top:-30px;
+  margin-left:10px;
+}
 .profile-pwd-btn {
   width: 37px;
   position: absolute;
@@ -1362,3 +1404,4 @@ audio::-webkit-media-controls-panel {
   padding: 6px;
   text-align: center;  
 }
+
