--- a/src/screens/BillingScreen/BillingScreen.css
+++ b/src/screens/BillingScreen/BillingScreen.css
@@ -58,7 +58,7 @@ tbody tr td {
   text-decoration: none;
   margin-right: 10px;
   width: 154px;
-  height: 37px;
+  height: 35px;
 }
 .rate-btn {
   font-size: 12px;
@@ -88,7 +88,7 @@ tbody tr td {
   border-radius: 100%;
   background-color: #535353;
   box-shadow: 0px 8px 0px #535353, 0px 17px 0px #535353;
-  margin-top: -9px;
+  margin-top: -16px;
 }
 
 .row-table {
@@ -144,19 +144,39 @@ tbody tr td {
   background: #fff;
   border-radius: 10px;
   box-shadow: -3px 15px 12px -4px #ededed;
-  height: 155px;
+  height: 175px ;
+  /* height:  auto; */
   width: 70%;
-  align-items: center;
   overflow: hidden;
   position: relative;
-  background: #FFFFFF;
- 
+  background: #FFFFFF; 
+}
+.billing-add:hover{
+  border:none;
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;  
+}
+.home-card {
+   background: #fff;
+  border-radius: 10px;
+  box-shadow: -3px 15px 12px -4px #ededed;
+  /* height: 175px ;  */
+  /* height:  auto; */
+  /* width: 70%;
+  overflow: hidden; */
+  position: relative;
+  /* background: #FFFFFF;  */
+}
+.home-card:hover{
+  border:none;
+  box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.1);
+  border-radius: 16px;  
 }
 .billing_back {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 175px !important;
+  width: 198px !important;
   padding: 0 !important;
 }
 .scale-back {
