--- a/src/screens/onboarding/style.css
+++ b/src/screens/onboarding/style.css
@@ -18,7 +18,6 @@
   font-weight: 500;
   font-size: 16px;
   top: 13px;
-  /* line-height: 110%; */
   text-align: center;
   color: #638995;
 }
@@ -29,11 +28,14 @@
   font-size: 26px;
   color: #0b171b;
 }
-.onboarding-text {
+.onboarding-text{
   font-family: "f3";
   font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
+  font-weight: 400 !important;
+  font-size: 15px !important;  
+  width: 185px !important;
+  height: 120px !important;
+  /* margin:10px; */
   color: #638995;
 }
 
