--- a/src/screens/signup/style.css
+++ b/src/screens/signup/style.css
@@ -48,10 +48,11 @@
   background: #40a9ff !important;
   border: 0 !important;
   width: 100%;
+  height: 45px;
   text-align: center;
   color: #fff;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 8px !important;
   padding: 10px;
 }
 .bdy-in {
@@ -85,8 +86,8 @@
 }
 
 .stud-prof p {
-  height: 67px;
-  overflow: hidden;
+  height: 95px;
+  overflow: auto;
 }
 .stud-prof .form-check-input:checked[type="radio"] {
   background: none !important;
