--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -8,6 +8,9 @@
   .hori-image{
     display: none;
   }
+  .hori-content{
+    display: none;
+  }
   .horizontal-card{  
     width: 100%; 
     background: #FFFFFF;
@@ -295,6 +298,9 @@
   .lftqst .logo-tag {
     display: none !important;
   }
+  .hori-image{
+    display: none;
+  }
   .lftsdbr {
     top: 50px;
     position: fixed;
@@ -380,6 +386,9 @@
   .rec-aud-tag {
     width: 92%;
   }
+ 
+}
+@media (min-width:768px)and(max-width: 992px) {
   .hori-image{
     display: none;
   }
@@ -391,6 +400,9 @@
   }
   .rec-box {
     padding: 8px 0 !important;
+  }
+  .hori-image{
+    display: none;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
