--- a/src/screens/home/responsive.css
+++ b/src/screens/home/responsive.css
@@ -168,7 +168,7 @@
     width: 220px !important;
     height: 220px !important;
   }
-  .stud-prof .form-check-input {
+  .stud-prof .form-check-inp {
     border-radius: 9px;
     width: 215px !important;
     height: 220px !important;
